Fix issues with saving jail role and other assignments. Update API client package ref. Fix display issue where assignment timeline grid is wrapped and displayed under sidebar instead of beside it.

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1273,3 +1273,12 @@ label.file-upload {
 .table > thead > tr > td, .table > thead > tr > th {
     vertical-align: top;
 }
+
+/* Fix for react calendar */
+.react-calendar-timeline > .rct-sidebar {
+    width: 200px;
+}
+
+.react-calendar-timeline > .rct-sidebar + div {
+    width: calc(100% - 200px);
+}
